testdata/baselines/reference/submodule/conformance/restElementWithAssignmentPattern2.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
restElementWithAssignmentPattern2.ts(2,1): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
restElementWithAssignmentPattern2.ts(2,7): error TS2339: Property '0' does not exist on type '{}'.
restElementWithAssignmentPattern2.ts(2,18): error TS2339: Property 'b' does not exist on type '{}'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== restElementWithAssignmentPattern2.ts (3 errors) ====
    var a: string, b: number;
    [...{ 0: a = "", b }] = ["", 1];
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
          ~
!!! error TS2339: Property '0' does not exist on type '{}'.
                     ~
!!! error TS2339: Property 'b' does not exist on type '{}'.